end-2-end-devops-proj/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: microservices-ingress
  namespace: production

spec:
  ingressClassName: nginx
  rules:
    - host: microservices.local

      http:
        paths:
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 3000

          - path: /tasks
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 3000

          - path: /health
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 3000
